--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,12 @@ main {
 	padding-top: 10vh;
 }
 
+.display {
+	margin: 3vh 20vw;
+	border-bottom: 1px black solid;
+	padding-bottom: 0.5vh;
+}
+
 .form-input {
 	border: none;
 	border-bottom: 2px #FF756D solid;
