--- a/css/styles.css
+++ b/css/styles.css
@@ -99,3 +99,36 @@ main {
 
 
 /* FOOTER */
+footer {
+	position: absolute;
+	bottom: 0;
+	min-width: 100%;
+	padding: 1vh 0;
+	background-color: #FFF49C;
+	font-size: 1em;
+}
+
+.more-link {
+	color: black;
+}
+
+.more-link:active {
+	color: red !important;
+}
+
+.more-link:hover {
+	color: green;
+}
+
+#copyright {
+	display: block;
+}
+
+#more {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+
+	padding: 1vh 0 0;
+	font-size: 1.2em;
+}
